--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       - 8080:80
     volumes:
       - ./:/src
-    command: swipl ./menu_terminal.pl
+    command: swipl ./v1/menu_terminal.pl
   v2:
     image: swipl
     working_dir: /src
